test/cases/compile_errors/array_access_of_undeclared_identifier.zig
export fn f() void {
    i[i] = i[i];
}

// error
// backend=stage2
// target=native
//
// :2:5: error: use of undeclared identifier 'i'
